objects/Investimento_Bonificacao_e_Pagamento__c.object
<CustomObject>
    <description>Onda 02 Projeto - Objeto para controlar Verbas (Contratos, Eventos, Ações Promocionais, Treinamentos) e Utilizado para Calculo do ROI</description>
    <fields>
        <fullName>Acao_Promocional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ação Promocional</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Investimento, Bonificação e Pagamento</relationshipLabel>
        <relationshipName>Investimento_Bonifica_o_e_Pagamento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ano_Calendario__c</fullName>
        <formula>text(YEAR( Data_de_Previsao_do_Pagamento__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ano Calendário</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ano_Fiscal__c</fullName>
        <formula>IF(MONTH(Data_de_Previsao_do_Pagamento__c)&gt;=7 &amp;&amp; MONTH(Data_de_Previsao_do_Pagamento__c)&lt;=12,

&quot;FY&quot;&amp;RIGHT(text(YEAR(Data_de_Previsao_do_Pagamento__c)+1),2)
&amp;&quot;: jul/&quot;&amp;
RIGHT(text(YEAR(Data_de_Previsao_do_Pagamento__c)),2)
&amp;&quot; - jun/&quot;&amp;
RIGHT(text(YEAR(Data_de_Previsao_do_Pagamento__c)+1),2)
,
&quot;FY&quot;&amp;RIGHT(text(YEAR(Data_de_Previsao_do_Pagamento__c)),2)
&amp;&quot;: jul/&quot;&amp;
RIGHT(text(YEAR(Data_de_Previsao_do_Pagamento__c)-1),2)
&amp;&quot; - jun/&quot;&amp;
RIGHT(text(YEAR(Data_de_Previsao_do_Pagamento__c)),2)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ano Fiscal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ano_fiscal_calculado__c</fullName>
        <formula>IF (MONTH( Data_de_Previsao_do_Pagamento__c )&gt;6, YEAR(Data_de_Previsao_do_Pagamento__c ) +1, 
YEAR(Data_de_Previsao_do_Pagamento__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ano fiscal (calculado)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasoEspecial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CasoEspecial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <formula>LAT_Contract__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conta_IBP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investimento, Bonificação e Pagamento</relationshipLabel>
        <relationshipName>Investimento_Bonifica_o_e_Pagamento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conta__c</fullName>
        <formula>LAT_Contract__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custo_Bonificado__c</fullName>
        <label>Custo Bonificado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_de_Encerramento__c</fullName>
        <label>Data de Encerramento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_Previsao_do_Pagamento__c</fullName>
        <description>Data prevista para o pagamento que é base para cálculo do Mês, Ano de Referência e Ano Fiscal.</description>
        <label>Data de Previsão do Pagamento</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descricao__c</fullName>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finalidade_SCV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finalidade SCV</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>CRM</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>FV</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Investimento, Bonificação e Pagamento</relationshipLabel>
        <relationshipName>Investimento_Bonifica_o_e_Pagamento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finalidade__c</fullName>
        <label>Finalidade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contrato</fullName>
                </value>
                <value>
                    <fullName>Festas/Eventos</fullName>
                </value>
                <value>
                    <fullName>Tailor Made</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT_Contract</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Investimento, Bonificação e Pagamento</relationshipLabel>
        <relationshipName>Investimento_Bonifica_o_e_Pagamento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Bonificado</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Investimento, Bonificação e Pagamento</relationshipLabel>
        <relationshipName>LAT_Investimento_Bonifica_o_e_Pagamento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MensagemIntegracao__c</fullName>
        <label>Mensagem Integração</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mes__c</fullName>
        <formula>IF(MONTH( Data_de_Previsao_do_Pagamento__c )=1,
&quot;Janeiro&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=2,
&quot;Fevereiro&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=3,
&quot;Março&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=4,
&quot;Abril&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=5,
&quot;Maio&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=6,
&quot;Junho&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=7,
&quot;Julho&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=8,
&quot;Agosto&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=9,
&quot;Setembro&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=10,
&quot;Outubro&quot;
,IF(MONTH( Data_de_Previsao_do_Pagamento__c )=11,
&quot;Novembro&quot;
,&quot;Dezembro&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_da_DA__c</fullName>
        <description>Número da D.A inserida pelo usuário para consultar saldo</description>
        <inlineHelpText>Número da D.A para consultar saldo</inlineHelpText>
        <label>Número da D.A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_da_RV_criada__c</fullName>
        <label>Número da RV criada</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objetivo__c</fullName>
        <label>Objetivo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OldFinalidade__c</fullName>
        <label>OldFinalidade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contrato</fullName>
                </value>
                <value>
                    <fullName>Festas / Eventos</fullName>
                </value>
                <value>
                    <fullName>Taylor Made</fullName>
                </value>
                <value>
                    <fullName>Aniversário</fullName>
                </value>
                <value>
                    <fullName>Ativação</fullName>
                </value>
                <value>
                    <fullName>Condições Comerciais</fullName>
                </value>
                <value>
                    <fullName>Enxoval</fullName>
                </value>
                <value>
                    <fullName>Estrutural</fullName>
                </value>
                <value>
                    <fullName>Incentivos a clientes</fullName>
                </value>
                <value>
                    <fullName>Introdução a novos produtos</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Materiais</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação + Materiais Taylor Made</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação + Material POS</fullName>
                </value>
                <value>
                    <fullName>On Trade - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos - Ativação</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos - material</fullName>
                </value>
                <value>
                    <fullName>PDV</fullName>
                </value>
                <value>
                    <fullName>Ponto Extra</fullName>
                </value>
                <value>
                    <fullName>Promoção de preço a consumidor</fullName>
                </value>
                <value>
                    <fullName>Promotoras</fullName>
                </value>
                <value>
                    <fullName>Tabloides</fullName>
                </value>
                <value>
                    <fullName>Treinamento</fullName>
                </value>
                <value>
                    <fullName>Value Added Packs (VAP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origem_da_SV__c</fullName>
        <formula>IF( NOT(ISBLANK(LAT_Contract__c)), &quot;Contrato:&quot; &amp; HYPERLINK(&quot;/&quot; &amp;LAT_Contract__c, LAT_Contract__r.ContractNumber__c) , &quot;Ação Promocional: &quot;&amp;HYPERLINK(&quot;/&quot; &amp; Acao_Promocional__c , Acao_Promocional__r.Name) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origem da SV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outros_Pagamentos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outros Pagamentos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perc_de_Rateio__c</fullName>
        <label>% de Rateio</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primeiro_Pagamento__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que será marcado através de trigger.</description>
        <label>Primeiro Pagamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Produto_Bonificado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Bonificado</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Investimento, Bonificação e Pagamento</relationshipLabel>
        <relationshipName>Investimento_Bonifica_o_e_Pagamento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saldo_Caixas__c</fullName>
        <formula>Volume_Cx__c -   Volume_Pago_Cx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo (CA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saldo_R__c</fullName>
        <formula>Valor_R__c -   Valor_Pago_R__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScheduleC_Bonificado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Informe qual ScheduleC será bonificado.</inlineHelpText>
        <label>ScheduleC Bonificado</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Não existem registros Bonificados para seleção.</errorMessage>
            <filterItems>
                <field>Informacoes_do_Produto__c.Produto_Bonificado__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Informacoes_do_Produto__c</referenceTo>
        <relationshipLabel>Investimento, Bonificação e Pagamento</relationshipLabel>
        <relationshipName>Investimento_Bonifica_o_e_Pagamento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sistema__c</fullName>
        <label>Sistema</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Data_de_pagamento__c</fullName>
        <formula>CASE(Status_da_Verba__c, &quot;Reservado&quot;, &quot;1 - &quot;, &quot;Em Aprovação&quot;,&quot;2 - &quot;, &quot;Aguardando Integração&quot;,&quot;3 - &quot;, &quot;Aguardando Aprovação&quot;,&quot;4 - &quot;,&quot;Em preenchimento&quot;,&quot;5 - &quot;,&quot;Reprovado&quot;,&quot;6 - &quot;,&quot;7 -&quot;) &amp; 

text(Status_da_Verba__c) &amp; &quot; - &quot; &amp; 

text(YEAR(Data_de_Previsao_do_Pagamento__c)) &amp; &quot;/&quot; &amp; 
IF(Month(Data_de_Previsao_do_Pagamento__c) &lt; 10, &quot;0&quot; &amp; text(Month(Data_de_Previsao_do_Pagamento__c)), text(Month(Data_de_Previsao_do_Pagamento__c))) &amp; &quot;/&quot; &amp; 
IF(Day (Data_de_Previsao_do_Pagamento__c) &lt; 10, &quot;0&quot; &amp; text(Day(Data_de_Previsao_do_Pagamento__c)),text(Day(Data_de_Previsao_do_Pagamento__c)))</formula>
        <label>Status - Data de pagamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_da_Integracao__c</fullName>
        <label>Status da Integracao</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enviado para SCV/ME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_da_Verba__c</fullName>
        <label>Status da Verba</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Em Aprovação</fullName>
                </value>
                <value>
                    <fullName>Encerrada</fullName>
                </value>
                <value>
                    <fullName>Aguardando Integração</fullName>
                </value>
                <value>
                    <fullName>Reservado</fullName>
                </value>
                <value>
                    <fullName>Reprovado</fullName>
                </value>
                <value>
                    <fullName>Aguardando Aprovação</fullName>
                </value>
                <value>
                    <fullName>Em preenchimento</fullName>
                    <default>true</default>
                    <label>Em preenchimento</label>
                </value>
                <value>
                    <fullName>Aprovado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Verba__c</fullName>
        <label>Tipo de Verba</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off Trade - Indireto (todas as regiões)</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Direto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Tático</fullName>
                </value>
                <value>
                    <fullName>Off Trade - KA</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Eventos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - A&amp;P</fullName>
                </value>
                <value>
                    <fullName>On Trade - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos Nacionais</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação + Materiais POS</fullName>
                </value>
                <value>
                    <fullName>KA - Contratos</fullName>
                </value>
                <value>
                    <fullName>KA - Verba preço promocionado</fullName>
                </value>
                <value>
                    <fullName>On trade - Verba venda direta</fullName>
                </value>
                <value>
                    <fullName>Bonificação (diferença entre pol.coml e bonificação real)</fullName>
                </value>
                <value>
                    <fullName>Allowance (% faturamento)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_Pago_R__c</fullName>
        <label>Valor Pago (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_Percebido__c</fullName>
        <label>Valor Percebido</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_R__c</fullName>
        <label>Valor (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verba_Adiantada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verba Adiantada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verba_Adicional_VAD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verba Adicional VAD</label>
        <referenceTo>Verba_Adicional_VAD__c</referenceTo>
        <relationshipLabel>Investimento, Bonificação e Pagamento</relationshipLabel>
        <relationshipName>Investimento_Bonifica_o_e_Pagamento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verba_Extra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verba Extra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verba_Normal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verba Normal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verba_Reservada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verba Reservada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verba_do_Sistema__c</fullName>
        <label>Verba do Sistema</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>SCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume_Cx__c</fullName>
        <inlineHelpText>Caixas Reais</inlineHelpText>
        <label>Volume (CA)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Pago_Cx__c</fullName>
        <label>Volume Pago (Cx)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Investimento, Bonificação e Pagamento</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAT_Contract__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_Product__c</columns>
        <columns>Cliente__c</columns>
        <columns>Volume_Cx__c</columns>
        <columns>Valor_R__c</columns>
        <columns>Data_de_Previsao_do_Pagamento__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_Contract__c</field>
            <operation>equals</operation>
            <value>00023227</value>
        </filters>
        <label>Tudo</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SV-{000000}</displayFormat>
        <label>Solicitação Verba</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investimento, Bonificação e Pagamento</pluralLabel>
    <recordTypes>
        <fullName>Bonificacao_Produtos</fullName>
        <active>true</active>
        <description>Bonificação (Produtos)</description>
        <label>Bonificação (Produtos)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dinheiro</fullName>
        <active>true</active>
        <description>Dinheiro</description>
        <label>Dinheiro</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Data_pagto_maior_vigencia_contrato</fullName>
        <active>true</active>
        <errorConditionFormula>Data_de_Previsao_do_Pagamento__c &gt;  (LAT_Contract__r.EndDate__c + 60)</errorConditionFormula>
        <errorDisplayField>Data_de_Previsao_do_Pagamento__c</errorDisplayField>
        <errorMessage>A data de previsão pagamento não pode ser superior a 60 dias após a data de término do contrato.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verifica_atualizacao_SKU_referencia</fullName>
        <active>true</active>
        <description>Checa se o campo SKU Referencia foi preenchido pela trigger, o qual é obtido no objeto Informações de Produto. Caso não esteja preenchido não deixa o registro ser gravado, pois o parâmetro necessita estar ok.</description>
        <errorConditionFormula>IF($RecordType.Name = &apos;Bonificação (Produtos)&apos;, AND(ISBLANK(LAT_Product__c),ISBLANK(Produto_Bonificado__c)), false)</errorConditionFormula>
        <errorDisplayField>Perc_de_Rateio__c</errorDisplayField>
        <errorMessage>O ScheduleC selecionado não possui SKU de referência cadastrado em Informações de Produtos. Contate a equipe Financeira para cadastro deste parâmetro.</errorMessage>
    </validationRules>
</CustomObject>